<resources>
    <string name="app_name">Least</string>
    <string name="scoreFormat">Score : %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="gameDescribeText">หาตัวเลขที่น้อยที่สุดกันเถอะ</string>
    <string name="gameNameText">LEAST</string>
    <string name="startButtonText">START</string>
    <string name="chartText">SCOREBOARD</string>
    <string name="scoreText">Score : 0</string>
    <string name="levelText">Level</string>
    <string name="endText">End game</string>
    <string name="youScoreText">YOU SCORE</string>
    <string name="postScoreText">POST SCORE</string>
    <string name="playAgainText">PLAY AGAIN</string>
    <string name="historyText">SCORE BOARD</string>
    <string name="shareText">ฉันได้คะแนน %1$d จากแอพ least!</string>
    <string name="homeText">HOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testScore">8000</string>
    <string name="gameDes">Find the smallest number</string>
    <string name="aboutTopic">ABOUT</string>
    <string name="aboutDetail">แอพ least เป็นเกมส์หาตัวเลขน้อยที่สุดในเวลา 1 นาที และตอบผิดได้สูงสุด 3 ครั้ง</string>
    <string name="what_is_your_name">PANUWAT RUEHAROM 59160969</string>

    <string name="title"><![CDATA[<h3>HISTORY</h3>]]></string>
    <string name="date"><![CDATA[<b>Date:</b>]]></string>
    <string name="score"><![CDATA[<b>Score:</b>]]></string>
    <string name="clearText">CLEAR</string>
    <string name="cleared_database">All your data is gone forever</string>
    <string name="no_score">No. Score</string>
    <string name="ruler_1">กติกา การเล่นเกมนี้</string>
    <string name="ruler_2">1.หาตัวเลขน้อยที่สุดให้เจอ</string>
    <string name="ruler_3">2.ตอบผิดได้ไม่เกิน 3 ครั้ง</string>
    <string name="ruler_4">3.มีเวลาเล่นเกมส์ให้ 1 นาที</string>
    <string name="ruler_5">ขอให้โชคดี</string>
    <string name="least_game">least game เป็นเกมส์ที่เน้นฝึกการสังเกตุและความไวในการหาตัวเลข</string>
    <string name="rules">RULES</string>

</resources>
