<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="269dp"
            android:layout_height="396dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:src="@drawable/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gameNameText"
            android:layout_width="125dp"
            android:layout_height="66dp"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:text="@string/gameNameText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/gameDescribeText"
            android:layout_width="198dp"
            android:layout_height="29dp"
            android:layout_marginStart="106dp"
            android:layout_marginLeft="106dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="107dp"
            android:layout_marginRight="107dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameNameText"
            tools:text="@string/gameDescribeText" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="168dp"
            android:layout_height="46dp"
            android:layout_marginStart="141dp"
            android:layout_marginLeft="141dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:background="@color/startColor"
            android:text="@string/startButtonText"
            android:textColor="@color/White"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameDescribeText" />

        <Button
            android:id="@+id/chartButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="168dp"
            android:layout_height="46dp"
            android:layout_marginStart="141dp"
            android:layout_marginLeft="141dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:layout_marginBottom="77dp"
            android:background="@color/chartColor"
            android:shadowColor="@color/chartColor"
            android:text="@string/chartText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startGameButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>